{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "9e8d3389-7ea5-4c47-8dee-707559b4613e",
            "actions": [
                {
                    "name": "TouchPrimary",
                    "type": "PassThrough",
                    "id": "6449ab06-e335-4590-9754-b748470b61cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "6dfc1b8f-335c-4944-a418-f725a9371e8e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a666111c-5285-4623-b33d-f1adbd2fb161",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPrimary",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85aced25-bdd0-4195-8968-d9afb8c184e7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Keys",
            "id": "5122cdb5-442c-4b7f-8a76-cf1164d6c2c8",
            "actions": [
                {
                    "name": "W",
                    "type": "Button",
                    "id": "56c779b7-634d-47f1-a1ef-c362a0b62345",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1712215-aa60-4599-822d-a620cb1788d6",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "W",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}